--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -98,11 +98,11 @@
 // inheritance to nested tables.
 
 // Generate the contextual variants
-@include table-row-variant(null, active, $table-bg-active, $table-bg-active-hover);
-@include table-row-variant(null, success, $state-success-bg, $state-success-hover-bg);
-@include table-row-variant(null, info, $state-info-bg, $state-info-hover-bg);
-@include table-row-variant(null, warning, $state-warning-bg, $state-warning-hover-bg);
-@include table-row-variant(null, danger, $state-danger-bg, $state-danger-hover-bg);
+@include table-row-variant(active, $table-bg-active, $table-bg-active-hover);
+@include table-row-variant(success, $state-success-bg, $state-success-hover-bg);
+@include table-row-variant(info, $state-info-bg, $state-info-hover-bg);
+@include table-row-variant(warning, $state-warning-bg, $state-warning-hover-bg);
+@include table-row-variant(danger, $state-danger-bg, $state-danger-hover-bg);
 
 
 // Inverse styles
@@ -157,11 +157,11 @@
   }
 }
 
-@include table-row-variant('.table-inverse', active, $table-bg-inverse-active, $table-bg-inverse-active-hover);
-@include table-row-variant('.table-inverse', success, $state-success-text, $state-success-inverse-hover-bg);
-@include table-row-variant('.table-inverse', info, $state-info-text, $state-info-inverse-hover-bg);
-@include table-row-variant('.table-inverse', warning, $state-warning-text, $state-warning-inverse-hover-bg);
-@include table-row-variant('.table-inverse', danger, $state-danger-text, $state-danger-inverse-hover-bg);
+@include table-inverse-row-variant(active, $table-bg-inverse-active, $table-bg-inverse-active-hover);
+@include table-inverse-row-variant(success, $state-success-text, $state-success-inverse-hover-bg);
+@include table-inverse-row-variant(info, $state-info-text, $state-info-inverse-hover-bg);
+@include table-inverse-row-variant(warning, $state-warning-text, $state-warning-inverse-hover-bg);
+@include table-inverse-row-variant(danger, $state-danger-text, $state-danger-inverse-hover-bg);
 
 // Responsive tables
 //
