--- a/scss/_images.scss
+++ b/scss/_images.scss
@@ -29,7 +29,7 @@
 
 .figure {
   // Ensures the caption's text aligns with the image.
-  display: inline-block;
+  display: block;
 }
 
 .figure-img {
