add overflow hidden to dropdown menu

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -105,6 +105,7 @@
   // Show the menu
   > .dropdown-menu {
     display: block;
+    overflow: hidden;
   }
 
   // Remove the outline when :focus is triggered
