Fix for .navbar-toggleable-* > .container-fluid

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -159,7 +159,8 @@
         }
 
         // For nesting containers, have to redeclare for alignment purposes
-        > .container {
+        > .container,
+        > .container-fluid {
           display: flex;
           flex-wrap: nowrap;
           align-items: center;
