--- a/less/variables.less
+++ b/less/variables.less
@@ -5,20 +5,39 @@
 
 //== Colors
 //
+
+// APImetrics Brand colors
+@apim-blue:             #2e3192;
+@apim-pear-green:       #9bcb3c; // shoud it be #9ccb35 ?
+@apim-white:            #ffffff;
+@apim-grey-dark:        #6d6e71;
+@apim-grey-medium:      #939598;
+@apim-grey-text:        #262626;
+// APImetrics extended palette
+@apim-blue-light:       #d5d9ee;
+@apim-blue-medium:      #96a4d3;
+@apim-pear-light:       #e7efbd;
+@apim-pear-medium:      #ceef7f;
+@apim-grey-light:       #ededed;
+// Pass / Warning / Fail colors
+@apim-pass:             #5cb85c;
+@apim-fail:             #d9534f;
+@apim-warn:             rgb(247, 163, 92);
+
 //## Gray and brand colors for use across Bootstrap.
 
-@gray-base:              #000;
-@gray-darker:            lighten(@gray-base, 13.5%); // #222
-@gray-dark:              lighten(@gray-base, 20%);   // #333
-@gray:                   lighten(@gray-base, 33.5%); // #555
-@gray-light:             lighten(@gray-base, 46.7%); // #777
-@gray-lighter:           lighten(@gray-base, 93.5%); // #eee
+@gray-base:              @apim-grey-text;
+@gray-darker:            lighten(@gray-base, 13.5%); // was #222
+@gray-dark:              @apim-grey-dark;   // was #333
+@gray:                   @apim-grey-medium; // was #555
+@gray-light:             @apim-grey-medium;  // was #777
+@gray-lighter:           @apim-grey-light;  // was #eee
 
-@brand-primary:         darken(#428bca, 6.5%); // #337ab7
-@brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
-@brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+@brand-primary:         @apim-blue;
+@brand-success:         @apim-pear-green;
+@brand-info:            @apim-blue-medium;
+@brand-warning:         @apim-warn;
+@brand-danger:          @apim-fail;
 
 
 //== Scaffolding
@@ -26,14 +45,14 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #fff;
+@body-bg:               @apim-white;
 //** Global text color on `<body>`.
-@text-color:            @gray-dark;
+@text-color:            @apim-grey-text;
 
 //** Global textual link color.
 @link-color:            @brand-primary;
 //** Link hover color set via `darken()` function.
-@link-hover-color:      darken(@link-color, 15%);
+@link-hover-color:      @apim-pear-green; //darken(@link-color, 15%);
 //** Link hover decoration.
 @link-hover-decoration: underline;
 
@@ -42,7 +61,7 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  "Open Sans Light", "Source Sans Pro Light", "Open Sans", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
@@ -65,8 +84,8 @@
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
 
 //** By default, this inherits from the `<body>`.
-@headings-font-family:    inherit;
-@headings-font-weight:    500;
+@headings-font-family:    "Open Sans", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;;
+@headings-font-weight:    bold;
 @headings-line-height:    1.1;
 @headings-color:          inherit;
 
@@ -102,9 +121,9 @@
 @line-height-large:         1.3333333; // extra decimals for Win 8.1 Chrome
 @line-height-small:         1.5;
 
-@border-radius-base:        4px;
-@border-radius-large:       6px;
-@border-radius-small:       3px;
+@border-radius-base:        0;
+@border-radius-large:       0;
+@border-radius-small:       0;
 
 //** Global color for active items (e.g., navs or dropdowns).
 @component-active-color:    #fff;
@@ -232,20 +251,20 @@
 //## Dropdown menu container and contents.
 
 //** Background for the dropdown menu.
-@dropdown-bg:                    #fff;
+@dropdown-bg:                    @apim-white;
 //** Dropdown menu `border-color`.
-@dropdown-border:                rgba(0,0,0,.15);
+@dropdown-border:                @apim-grey-light;
 //** Dropdown menu `border-color` **for IE8**.
 @dropdown-fallback-border:       #ccc;
 //** Divider color for between dropdown items.
-@dropdown-divider-bg:            #e5e5e5;
+@dropdown-divider-bg:            @apim-grey-medium;
 
 //** Dropdown link text color.
 @dropdown-link-color:            @gray-dark;
 //** Hover color for dropdown links.
-@dropdown-link-hover-color:      darken(@gray-dark, 5%);
+@dropdown-link-hover-color:      @apim-pear-green;
 //** Hover background for dropdown links.
-@dropdown-link-hover-bg:         #f5f5f5;
+@dropdown-link-hover-bg:         @apim-grey-light;
 
 //** Active dropdown menu item text color.
 @dropdown-link-active-color:     @component-active-color;
@@ -357,24 +376,29 @@
 //##
 
 // Basics of a navbar
-@navbar-height:                    50px;
+@navbar-height:                    70px;
+@navbar-default-shadow-height:     7px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color:             #777;
-@navbar-default-bg:                #f8f8f8;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-color:             @apim-grey-dark;
+@navbar-default-bg:                @apim-grey-light;
+@navbar-default-border:            @apim-grey-light; //darken(@navbar-default-bg, 6.5%);
+
+@navbar-default-shadow-color:           @apim-pear-green;
+@navbar-default-shadow-color-active:    @apim-blue-medium;
+@navbar-default-shadow-color-hover:     @apim-blue-medium;
 
 // Navbar links
-@navbar-default-link-color:                #777;
-@navbar-default-link-hover-color:          #333;
+@navbar-default-link-color:                @apim-grey-text;
+@navbar-default-link-hover-color:          @apim-pear-green;
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #555;
-@navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
-@navbar-default-link-disabled-color:       #ccc;
+@navbar-default-link-active-color:         @apim-blue;
+@navbar-default-link-active-bg:            @apim-blue-light;
+@navbar-default-link-disabled-color:       @apim-grey-dark;
 @navbar-default-link-disabled-bg:          transparent;
 
 // Navbar brand label
@@ -386,6 +410,16 @@
 @navbar-default-toggle-hover-bg:           #ddd;
 @navbar-default-toggle-icon-bar-bg:        #888;
 @navbar-default-toggle-border-color:       #ddd;
+
+
+//== Sidebar
+//
+// ##
+@sidebar-default-color:             @apim-blue;
+@sidebar-default-color-focus:       @apim-white;
+@sidebar-default-bg:                @apim-blue-light;
+@sidebar-default-bg-focus:          @apim-blue;
+@sidebar-default-border:            @apim-grey-light;
 
 
 //=== Inverted navbar
