brand primary purp

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -2,3 +2,5 @@
 //
 // Copy variables from `_variables.scss` to this file to override default values
 // without modifying source files.
+
+$brand-primary:             #669;
