--- a/less/variables.less
+++ b/less/variables.less
@@ -268,7 +268,7 @@
 //** Hover color for dropdown links.
 @dropdown-link-hover-color:      @navbar-default-link-hover-color;
 //** Hover background for dropdown links.
-@dropdown-link-hover-bg:         @navbar-default-bg;
+@dropdown-link-hover-bg:         @navbar-default-link-hover-bg;
 
 //** Active dropdown menu item text color.
 @dropdown-link-active-color:     @component-active-color;
@@ -398,8 +398,8 @@
 
 // Navbar links
 @navbar-default-link-color:                @apim-grey-text;
-@navbar-default-link-hover-color:          @apim-pear-green;
-@navbar-default-link-hover-bg:             transparent;
+@navbar-default-link-hover-color:          @apim-blue;
+@navbar-default-link-hover-bg:             @apim-grey-medium;
 @navbar-default-link-active-color:         @apim-blue;
 @navbar-default-link-active-bg:            transparent;
 @navbar-default-link-disabled-color:       @apim-grey-dark;
@@ -411,9 +411,9 @@
 @navbar-default-brand-hover-bg:            transparent;
 
 // Navbar toggle
-@navbar-default-toggle-hover-bg:           #ddd;
-@navbar-default-toggle-icon-bar-bg:        #888;
-@navbar-default-toggle-border-color:       #ddd;
+@navbar-default-toggle-hover-bg:           @apim-blue;
+@navbar-default-toggle-icon-bar-bg:        @apim-blue-light;
+@navbar-default-toggle-border-color:       @apim-blue;
 
 
 //== Sidebar
