--- a/less/variables.less
+++ b/less/variables.less
@@ -61,11 +61,13 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  "Open Sans Light", "Source Sans Pro Light", "Open Sans", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  "Open Sans", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
+@font-family-weight:      300;  // Light
+@font-family-bold-weight: 600;  // Semi-bold
 
 @font-size-base:          14px;
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
@@ -85,7 +87,7 @@
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    "Open Sans", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@headings-font-weight:    bold;
+@headings-font-weight:    700; // bold
 @headings-line-height:    1.1;
 @headings-color:          @apim-blue;
 
@@ -707,14 +709,14 @@
 //##
 
 //** Background color on `.list-group-item`
-@list-group-bg:                 #fff;
+@list-group-bg:                 transparent;
 //** `.list-group-item` border color
-@list-group-border:             #ddd;
+@list-group-border:             @apim-grey-light;
 //** List group border radius
 @list-group-border-radius:      @border-radius-base;
 
 //** Background color of single list items on hover
-@list-group-hover-bg:           #f5f5f5;
+@list-group-hover-bg:           @apim-grey-light;
 //** Text color of active list items
 @list-group-active-color:       @component-active-color;
 //** Background color of active list items
@@ -725,15 +727,15 @@
 @list-group-active-text-color:  lighten(@list-group-active-bg, 40%);
 
 //** Text color of disabled list items
-@list-group-disabled-color:      @gray-light;
+@list-group-disabled-color:      @apim-grey-medium;
 //** Background color of disabled list items
-@list-group-disabled-bg:         @gray-lighter;
+@list-group-disabled-bg:         @apim-grey-light;
 //** Text color for content within disabled list items
 @list-group-disabled-text-color: @list-group-disabled-color;
 
-@list-group-link-color:         #555;
-@list-group-link-hover-color:   @list-group-link-color;
-@list-group-link-heading-color: #333;
+@list-group-link-color:         @apim-blue;
+@list-group-link-hover-color:   @apim-pear-green;
+@list-group-link-heading-color: @apim-grey-text;
 
 
 //== Panels
