--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -7,3 +7,4 @@ $brand-primary:             #669;
 $brand-inverse:             #2b2c34;
 $border-radius:          	25px;
 $border-radius-lg:			25px;
+$btn-secondary-border:		transparent;
