--- a/less/variables.less
+++ b/less/variables.less
@@ -87,7 +87,7 @@
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    "Open Sans", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@headings-font-weight:    700; // bold
+@headings-font-weight:    600; // bold
 @headings-line-height:    1.1;
 @headings-color:          @apim-blue;
 
@@ -166,7 +166,7 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              @apim-white;
-@btn-default-bg:                 @apim-grey-dark;
+@btn-default-bg:                 @apim-blue-medium;
 @btn-default-border:             darken(@btn-primary-bg, 5%);
 
 @btn-primary-color:              @apim-white;
@@ -244,9 +244,9 @@
 @legend-border-color:            #e5e5e5;
 
 //** Background color for textual input addons
-@input-group-addon-bg:           @gray-lighter;
+@input-group-addon-bg:           @apim-blue-light;
 //** Border color for textual input addons
-@input-group-addon-border-color: @input-border;
+@input-group-addon-border-color: @apim-blue;
 
 //** Disabled cursor for form controls and buttons.
 @cursor-disabled:                not-allowed;
@@ -268,9 +268,9 @@
 //** Dropdown link text color.
 @dropdown-link-color:            @navbar-default-link-color;
 //** Hover color for dropdown links.
-@dropdown-link-hover-color:      @navbar-default-link-hover-color;
+@dropdown-link-hover-color:      @apim-blue;
 //** Hover background for dropdown links.
-@dropdown-link-hover-bg:         @navbar-default-link-hover-bg;
+@dropdown-link-hover-bg:         @apim-blue-light;
 
 //** Active dropdown menu item text color.
 @dropdown-link-active-color:     @component-active-color;
