--- a/scss/utilities/_visibility.scss
+++ b/scss/utilities/_visibility.scss
@@ -11,14 +11,30 @@
 @each $breakpoint in map-keys($grid-breakpoints) {
   $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
-  .hidden#{$infix}-up {
-    @include media-breakpoint-up($breakpoint) {
-      display: none !important;
+
+  @if $infix == "" {
+    .hidden#{$infix}-up {
+      @include media-breakpoint-up($breakpoint) {
+        display: none !important;
+      }
     }
-  }
-  .hidden#{$infix}-down {
-    @include media-breakpoint-down($breakpoint) {
-      display: none !important;
+
+    .hidden {
+      @include media-breakpoint-up($breakpoint) {
+        display: none !important;
+      }
+    }
+  } @else {
+    .hidden#{$infix}-up {
+      @include media-breakpoint-up($breakpoint) {
+        display: none !important;
+      }
+    }
+
+    .hidden#{$infix}-down {
+      @include media-breakpoint-down($breakpoint) {
+        display: none !important;
+      }
     }
   }
 }
