Allow navbar links padding to be configurable.
Fixes #21956

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -153,8 +153,7 @@
           flex-direction: row;
 
           .nav-link {
-            padding-right: .5rem;
-            padding-left: .5rem;
+            $navbar-link-padding;
           }
         }
 
