--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -153,7 +153,7 @@
           flex-direction: row;
 
           .nav-link {
-            $navbar-link-padding;
+            padding: $navbar-link-padding;
           }
         }
 
