--- a/scss/utilities/_sizing.scss
+++ b/scss/utilities/_sizing.scss
@@ -1,10 +1,12 @@
 // responsive Width and Height properties
 
 @each $prop, $abbrev in (width: w, height: h) {
-	@each $bpname,$bpsize in $grid-breakpoints{
+	@each $bpname,$bpsize in $grid-breakpoints {
     @media (min-width: $bpsize) {
 		  @each $size, $length in $sizes {
-  			.#{$abbrev}-#{$size}-#{$bpname} { #{$prop}: $length !important; }
+  			.#{$abbrev}-#{$bpname}-#{$size} { 
+          #{$prop}: $length !important; 
+        }
 	  	}
     }
 	}
