--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -66,7 +66,7 @@
 
 select.form-control {
   &:not([size]):not([multiple]) {
-    $select-border-width: ($border-width * 2);
+    $select-border-width: ($input-btn-border-width * 2);
     height: calc(#{$input-height} + #{$select-border-width});
   }
 
