--- a/scss/_print.scss
+++ b/scss/_print.scss
@@ -22,10 +22,10 @@
     blockquote::first-line,
     li::first-line {
       // Bootstrap specific; comment out `color` and `background`
-      //color: #000 !important; // Black prints faster:
+      color: #000 !important; // Black prints faster:
                                 //   http://www.sanbeiji.com/archives/953
       text-shadow: none !important;
-      //background: transparent !important;
+      background: transparent !important;
       box-shadow: none !important;
     }
 
@@ -35,9 +35,9 @@
     }
 
     // Bootstrap specific; comment the following selector out
-    //a[href]::after {
-    //  content: " (" attr(href) ")";
-    //}
+    a[href]::after {
+      content: " (" attr(href) ")";
+    }
 
     abbr[title]::after {
       content: " (" attr(title) ")";
@@ -49,10 +49,10 @@
     // or use the `javascript:` pseudo protocol
     //
 
-    //a[href^="#"]::after,
-    //a[href^="javascript:"]::after {
-    // content: "";
-    //}
+    a[href^="#"]::after,
+    a[href^="javascript:"]::after {
+     content: "";
+    }
 
     pre {
       white-space: pre-wrap !important;
