.container-fluid media-breakpoint-down padding

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -138,7 +138,8 @@
           }
         }
 
-        > .container {
+        > .container,
+        > .container-fluid {
           padding-right: 0;
           padding-left: 0;
         }
