positioning .container > .navbar-toggler-*
`.navbar-toggler-*` needs to be left/right: 0 when it's in a `.container` or `.container-fluid` because of position: relative of their parents.

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -116,10 +116,20 @@
 .navbar-toggler-left {
   position: absolute;
   left: $navbar-padding-x;
+  
+  .container > &,
+  .container-fluid > & {
+    left: 0;
+  }
 }
 .navbar-toggler-right {
   position: absolute;
   right: $navbar-padding-x;
+  
+  .container > &,
+  .container-fluid > & {
+    right: 0;
+  }
 }
 
 // Generate series of `.navbar-toggleable-*` responsive classes for configuring
